kubernetes/nginx-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: neinkeinkaffee/flashcards-nginx:latest
          imagePullPolicy: "Always"
      restartPolicy: Always
