kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flashcards
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: flashcards.things-on-top-of-other-things.de
    http:
        paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
        - path: /flashcards
          backend:
            serviceName: flask
            servicePort: 5000
  tls:
  - hosts:
    - flashcards.things-on-top-of-other-things.de
    secretName: flashcards-things-on-top-of-other-things-de
